[package]
name = "mogglo-haskell"
version = "0.1.1"
edition = "2021"
description = "Multi-language AST-based code search and rewriting"
keywords = ["ast", "codemod", "code-search", "grep", "tree-sitter"]
authors = ["Langston Barrett <langston.barrett@gmail.com>"]
license = "MIT"
readme = "../../README.md"
homepage = "https://github.com/langston-barrett/mogglo"
repository = "https://github.com/langston-barrett/mogglo"

[dependencies]
anyhow = "1"
mogglo = { version = "0.1.1", features = ["cli"], path = "../mogglo" }
tree-sitter-haskell = { git = "https://github.com/tree-sitter/tree-sitter-haskell" }
