[package]
name = "mogglo"
version = "0.0.0"
edition = "2021"
description = "Multi-language AST-based code search and rewriting"
keywords = ["ast", "codemod", "code-search", "grep", "tree-sitter"]
authors = ["Langston Barrett <langston.barrett@gmail.com>"]
license = "MIT"
readme = "../../README.md"
homepage = "https://github.com/langston-barrett/mogglo"
repository = "https://github.com/langston-barrett/mogglo"

[dev-dependencies]
tree-sitter-rust = "0.20"

[dependencies]
anyhow = { version = "1", optional = true }
ariadne = "0.2"
clap = { version = "4", features = ["derive"], optional = true }
num_cpus = { version = "1", optional = true }
regex = "1"
rlua = { version = "0.19", features = ["lua-no-oslib"] }
tree-sitter = "0.20"
tree-sitter-edit = "0.1"

[features]
default = []
cli = ["dep:anyhow", "dep:clap", "dep:num_cpus"]
