[package]
name = "mogglo"
version = "0.1.1-rc.3"
edition = "2021"
description = "Multi-language AST-based code search and rewriting"
keywords = ["ast", "codemod", "code-search", "grep", "tree-sitter"]
authors = ["Langston Barrett <langston.barrett@gmail.com>"]
license = "MIT"
readme = "../../README.md"
homepage = "https://github.com/langston-barrett/mogglo"
repository = "https://github.com/langston-barrett/mogglo"

[dev-dependencies]
lazy_static = "1"
tree-sitter-rust = "0.20"

[dependencies]
anyhow = { version = "1", optional = true }
ariadne = { version = "0.2", optional = true }
clap = { version = "4", features = ["derive"], optional = true }
num_cpus = { version = "1", optional = true }
regex = "1"
rlua = { version = "0.19", features = ["lua-no-oslib"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tree-sitter = "0.20"
tree-sitter-edit = "0.1"

[features]
default = []
cli = ["dep:anyhow", "dep:ariadne", "dep:clap", "dep:num_cpus"]
